--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
 <body>
     <div class="pure-g">
         <div class="pure-u-1-1">
-            <h1>World Death by Air Pollution (1990-2017)</h1>
+            <h1>Data Visualisation II</h1>
         </div>
     </div>
 
     <!-- pure grid group -->
     <div class="pure-g">
         <div class="pure-u-1-1">
-            <div class="description description">
-                <h2>First Visualisation</h2>
+            <div class="description description-middle">
+                <h2>World Death by Air Pollution (1990-2017)</h2>
+                <p>
+                    Text: Work in progress
+                </p>
             </div>
         </div>
     </div>
@@ -47,22 +50,79 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-        <div class="pure-u-1-2">
+        <div class="pure-u-1-3">
             <div class="description description-left">
-                <h2>Second Visualisation</h2>
+                <h2>10 Highest Countries</h2>
+                    <div id="top_10_world" class="vis-container"></div>
+                </div>
             </div>
-        </div>
-        <div class="pure-u-1-1">
-            <div id="top_10_world" class="vis-container"></div>
+
+
+            <div class="pure-u-1-3">
+                <div class="description description-left">
+                    <h2>Indoor Pollution</h2>
+                    <div id="top_10_indoor" class="vis-container"></div>
+                </div>
+            </div>
+
+
+            <div class="pure-u-1-3">
+                <div class="description description-left">
+                    <h2>Outdoor Pollution</h2>
+                    <div id="top_10_outdoor" class="vis-container"></div>
+                </div>
+            </div>
+
+
         </div>
     </div>
-    <!-- end pure grid group -->
+        <!-- end pure grid group -->
+
+
+        <!-- pure grid group -->
+        <!-- <div class="pure-g">
+        <div class="pure-u-1-2">
+            <div class="description description-left">
+                <h2>Third Vis</h2>
+                <p>
+                    The first column contains text and the second column contains a visualisation.
+                    WORK IN PROGRESS
+                </p>
+            </div>
+        </div>
+        <div class="pure-u-1-2">
+            <div id="top_10_world" class="vis-container"></div>
+        </div>
+    </div> -->
+        <!-- end pure grid group -->
+
+
+
+        <!-- pure grid group -->
+        <!-- <div class="pure-g">
+        <div class="pure-u-1-2">
+            <div class="description description-left">
+                <h2>Fourth Vis</h2>
+                <p> 
+                    The first column contains text and the second column contains a visualisation.
+                    WORK IN PROGRESS
+                </p>
+            </div>
+        </div>
+        <div class="pure-u-1-2">
+            <div id="top_10_world" class="vis-container"></div>
+        </div>
+    </div> -->
+        <!-- end pure grid group -->
+
 </body>
 
 <footer>
     <script type="text/javascript">
         var spec1 = "js/1_death_world_map.json";
         var spec2 = "js/2_top_10_chart.json";
+        var spec3 = "js/3_indoor_bar.json";
+        var spec4 = "js/4_outdoor_bar.json";
 
         vegaEmbed('#map_overview', spec1).then(function (result) {
             // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
@@ -71,7 +131,26 @@
         vegaEmbed('#top_10_world', spec2).then(function (result) {
             // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
         }).catch(console.error);
+
+        vegaEmbed('#top_10_indoor', spec3).then(function (result) {
+            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+        }).catch(console.error);
+
+        vegaEmbed('#top_10_outdoor', spec4).then(function (result) {
+            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+        }).catch(console.error);
     </script>
 </footer>
 
 </html>
+
+<!-- idea
+- intro
+- world map
+- TOP 10 STACKED BAR CHART - add world average
+- outdoor vs indoor (bar chart)
+- explain could caused by something
+- top 10 countries number of Death (list)
+- Take focus to america
+- 
+-  -->
